# drindrin

./: .gitignore
android/: .gitignore
android/app/: build.gradle
android/app/src/androidTest/java/it/achdjian/paolo/drindrin/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/it/achdjian/paolo/drindrin/: BootCompletedIntentReceiver.kt  Constants.kt  MainActivity.kt  PlayingThread.kt  TcpServer.kt  TcpThread.kt
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml
android/app/src/test/java/it/achdjian/paolo/drindrin/: ExampleUnitTest.kt
button/firmware/: CMakeLists.txt  CrossCompiler.cmake  Makefile  main.c  wificfg.c
test/: client.c
